update dockerfile and scoping of simple lang in routing